# LPE

./: .gitignore  .gitmodules  README.md  notes.md
code/: CMakeLists.txt  CMakeSettings.json  compile.sh  disassemble.sh  openocd.cfg  stm32f0.ld  toolchain.cmake
code/Drivers/: core_cm0.h
code/src/: adc.cpp  adc.hpp  assert.hpp  base.hpp  core.cpp  core.hpp  entry_point.cpp  flash.cpp  flash.hpp  gpio.cpp  gpio.hpp  main.cpp  options.hpp  pin.hpp  timer.cpp  timer.hpp
code/week7/: LPE_wifi.cpp  main.cpp
code/week9/: displej_basic.cpp  magnetometr_displej_kompas.cpp  magnetometr_offset_remove.cpp  magnetometr_rotace_krychle.cpp  magnetometr_uloha_8.2.cpp
week_1/MCU/: MCU-cache.lib  MCU.pro  MCU.sch  MCU.sch-bak
week_1/schema/: schema-cache.lib  schema.sch  schema.sch-bak
week_2/mereni/: mereni-cache.lib  mereni.sch
